internal/gatewayapi/testdata/backendtrafficpolicy-tracing.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      hostnames:
        - gateway.envoyproxy.io
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: http
      rules:
        - matches:
            - path:
                value: "/"
          backendRefs:
            - name: service-1
              port: 8080
backendTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: default
      name: policy-for-route
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httproute-1
      telemetry:
        tracing:
          samplingFraction:
            numerator: 1
            denominator: 100
          customTags:
            "literal1":
              type: Literal
              literal:
                value: "value1"
            "env1":
              type: Environment
              environment:
                name: "env1"
                defaultValue: "-"
            "req1":
              type: RequestHeader
              requestHeader:
                name: "X-Request-Id"
                defaultValue: "-"
          # tags will override customTags
          tags:
            env1: "%ENVIRONMENT(ENVOY_POD_NAME)%"
            literal1: "literal_value_1"
            req1: "%REQUEST_HEADER(X-Request-Id)%"
